--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -53,6 +53,8 @@ template {
 a {
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
+  text-decoration: none;
+  color: #333;
 }
 a:active,
 a:hover {
@@ -63,6 +65,19 @@ abbr[title] {
   cursor: help;
   text-decoration: none;
 }
+
+button {
+  background: black;
+  color:coral;
+  border:none;
+  border-radius: 7px;
+  padding:5px;
+}
+
+button:hover{
+  cursor:pointer;
+}
+
 b,
 strong {
   font-weight: inherit;
